// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseArgs handles hot arg 1`] = `
Object {
  "devServerArgs": Object {
    "clientLogLevel": "info",
    "hot": true,
    "inline": true,
    "liveReload": true,
    "serveIndex": true,
  },
  "webpackArgs": Object {
    "color": true,
    "config": Array [],
    "hot": true,
    "mode": "production",
  },
}
`;

exports[`parseArgs handles unknown args 1`] = `
Array [
  Array [
    "Unknown argument: --unknown-arg",
  ],
  Array [
    "Unknown argument: --unknown-arg-2",
  ],
]
`;

exports[`parseArgs parses webpack and dev server args 1`] = `
Object {
  "devServerArgs": Object {
    "bonjour": true,
    "clientLogLevel": "info",
    "inline": true,
    "liveReload": true,
    "port": 8080,
    "serveIndex": true,
  },
  "webpackArgs": Object {
    "color": true,
    "config": Array [],
    "mode": "production",
    "target": "node",
  },
}
`;
